parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABRECOLCHETE
    COMENTARIO
    DIFERENTE
    FECHACOLCHETE
    PRINCIPAL
    RETORNA
    UNDERLINE
    VAZIO

Grammar

Rule 0     S' -> programa
Rule 1     programa -> declaracao programa
Rule 2     programa -> declaracao
Rule 3     declaracao -> declaracao_funcao
Rule 4     declaracao -> declara_var
Rule 5     declaracao_funcao -> tipo ID ABREPARENTESES declaracao_parametro FECHAPARENTESES sequencia_declaracao FIM
Rule 6     declaracao_funcao -> tipo ID ABREPARENTESES declaracao_parametro FECHAPARENTESES FIM
Rule 7     declaracao_funcao -> tipo ID ABREPARENTESES FECHAPARENTESES sequencia_declaracao FIM
Rule 8     declaracao_funcao -> tipo ID ABREPARENTESES FECHAPARENTESES FIM
Rule 9     declaracao_parametro -> tipo DOISPONTOS ID VIRGULA declaracao_parametro
Rule 10    declaracao_parametro -> tipo DOISPONTOS ID
Rule 11    sequencia_declaracao -> declaracao_codigo
Rule 12    sequencia_declaracao -> sequencia_declaracao declaracao_codigo
Rule 13    declaracao_codigo -> declaracao_funcao
Rule 14    declaracao_codigo -> expressao_condicional
Rule 15    declaracao_codigo -> expressao_interacao
Rule 16    declaracao_codigo -> expressao_atribuicao
Rule 17    declaracao_codigo -> expressao_leia
Rule 18    declaracao_codigo -> expressao_escreva
Rule 19    declaracao_codigo -> declara_var
Rule 20    declaracao_codigo -> retorna
Rule 21    declaracao_codigo -> chamada_funcao
Rule 22    expressao_condicional -> SE expressao ENTAO sequencia_de_declaracao SENAO sequencia_de_declaracao FIM
Rule 23    expressao_condicional -> SE expressao ENTAO sequencia_de_declaracao FIM
Rule 24    expressao_interacao -> REPITA sequencia_de_declaracao ATE expressao
Rule 25    expressao_atribuicao -> ID ATRIBUICAO expressao
Rule 26    expressao_leia -> LEIA ABREPARENTESES expressao FECHAPARENTESES
Rule 27    expressao_escreva -> ESCREVE ABREPARENTESES expressao FECHAPARENTESES
Rule 28    sequencia_de_declaracao -> declaracao_codigo
Rule 29    sequencia_de_declaracao -> sequencia_de_declaracao declaracao_codigo
Rule 30    declara_var -> tipo DOISPONTOS ID VIRGULA declara_var_loop
Rule 31    declara_var -> tipo DOISPONTOS ID
Rule 32    declara_var_loop -> ID VIRGULA declara_var_loop
Rule 33    declara_var_loop -> ID
Rule 34    retorna -> ABREPARENTESES expressao FECHAPARENTESES
Rule 35    chamada_funcao -> ID ABREPARENTESES parametros_chamada FECHAPARENTESES
Rule 36    parametros_chamada -> expressao VIRGULA parametros_chamada
Rule 37    parametros_chamada -> expressao
Rule 38    expressao -> expressao_simples
Rule 39    expressao -> expressao_simples operadores_comparacao expressao_simples
Rule 40    expressao_simples -> expressao_simples operadores_atribuicao termo
Rule 41    expressao_simples -> expressao_simples operadores_multiplicacao termo
Rule 42    expressao_simples -> termo
Rule 43    termo -> fator
Rule 44    fator -> ABREPARENTESES expressao FECHAPARENTESES
Rule 45    fator -> chamada_funcao
Rule 46    fator -> expressao_numerica
Rule 47    fator -> expressao_id
Rule 48    expressao_numerica -> numero
Rule 49    expressao_id -> ID
Rule 50    operadores_comparacao -> MAIOR
Rule 51    operadores_comparacao -> MAIORIGUAL
Rule 52    operadores_comparacao -> MENOR
Rule 53    operadores_comparacao -> MENORIGUAL
Rule 54    operadores_comparacao -> IGUAL
Rule 55    operadores -> NEGACAO
Rule 56    operadores -> E
Rule 57    operadores -> OU
Rule 58    operadores_atribuicao -> ADICAO
Rule 59    operadores_atribuicao -> SUBTRACAO
Rule 60    operadores_multiplicacao -> MULTIPLICACAO
Rule 61    operadores_multiplicacao -> DIVISAO
Rule 62    tipo -> INTEIRO
Rule 63    tipo -> FLUTUANTE
Rule 64    numero -> INTEIRO
Rule 65    numero -> FLUTUANTE
Rule 66    vazio -> <empty>

Terminals, with rules where they appear

ABRECOLCHETE         : 
ABREPARENTESES       : 5 6 7 8 26 27 34 35 44
ADICAO               : 58
ATE                  : 24
ATRIBUICAO           : 25
COMENTARIO           : 
DIFERENTE            : 
DIVISAO              : 61
DOISPONTOS           : 9 10 30 31
E                    : 56
ENTAO                : 22 23
ESCREVE              : 27
FECHACOLCHETE        : 
FECHAPARENTESES      : 5 6 7 8 26 27 34 35 44
FIM                  : 5 6 7 8 22 23
FLUTUANTE            : 63 65
ID                   : 5 6 7 8 9 10 25 30 31 32 33 35 49
IGUAL                : 54
INTEIRO              : 62 64
LEIA                 : 26
MAIOR                : 50
MAIORIGUAL           : 51
MENOR                : 52
MENORIGUAL           : 53
MULTIPLICACAO        : 60
NEGACAO              : 55
OU                   : 57
PRINCIPAL            : 
REPITA               : 24
RETORNA              : 
SE                   : 22 23
SENAO                : 22
SUBTRACAO            : 59
UNDERLINE            : 
VAZIO                : 
VIRGULA              : 9 30 32 36
error                : 

Nonterminals, with rules where they appear

chamada_funcao       : 21 45
declara_var          : 4 19
declara_var_loop     : 30 32
declaracao           : 1 2
declaracao_codigo    : 11 12 28 29
declaracao_funcao    : 3 13
declaracao_parametro : 5 6 9
expressao            : 22 23 24 25 26 27 34 36 37 44
expressao_atribuicao : 16
expressao_condicional : 14
expressao_escreva    : 18
expressao_id         : 47
expressao_interacao  : 15
expressao_leia       : 17
expressao_numerica   : 46
expressao_simples    : 38 39 39 40 41
fator                : 43
numero               : 48
operadores           : 
operadores_atribuicao : 40
operadores_comparacao : 39
operadores_multiplicacao : 41
parametros_chamada   : 35 36
programa             : 1 0
retorna              : 20
sequencia_de_declaracao : 22 22 23 24 29
sequencia_declaracao : 5 7 12
termo                : 40 41 42
tipo                 : 5 6 7 8 9 10 30 31
vazio                : 

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . declaracao programa
    (2) programa -> . declaracao
    (3) declaracao -> . declaracao_funcao
    (4) declaracao -> . declara_var
    (5) declaracao_funcao -> . tipo ID ABREPARENTESES declaracao_parametro FECHAPARENTESES sequencia_declaracao FIM
    (6) declaracao_funcao -> . tipo ID ABREPARENTESES declaracao_parametro FECHAPARENTESES FIM
    (7) declaracao_funcao -> . tipo ID ABREPARENTESES FECHAPARENTESES sequencia_declaracao FIM
    (8) declaracao_funcao -> . tipo ID ABREPARENTESES FECHAPARENTESES FIM
    (30) declara_var -> . tipo DOISPONTOS ID VIRGULA declara_var_loop
    (31) declara_var -> . tipo DOISPONTOS ID
    (62) tipo -> . INTEIRO
    (63) tipo -> . FLUTUANTE

    INTEIRO         shift and go to state 6
    FLUTUANTE       shift and go to state 7

    programa                       shift and go to state 1
    declaracao                     shift and go to state 2
    declaracao_funcao              shift and go to state 3
    declara_var                    shift and go to state 4
    tipo                           shift and go to state 5

state 1

    (0) S' -> programa .



state 2

    (1) programa -> declaracao . programa
    (2) programa -> declaracao .
    (1) programa -> . declaracao programa
    (2) programa -> . declaracao
    (3) declaracao -> . declaracao_funcao
    (4) declaracao -> . declara_var
    (5) declaracao_funcao -> . tipo ID ABREPARENTESES declaracao_parametro FECHAPARENTESES sequencia_declaracao FIM
    (6) declaracao_funcao -> . tipo ID ABREPARENTESES declaracao_parametro FECHAPARENTESES FIM
    (7) declaracao_funcao -> . tipo ID ABREPARENTESES FECHAPARENTESES sequencia_declaracao FIM
    (8) declaracao_funcao -> . tipo ID ABREPARENTESES FECHAPARENTESES FIM
    (30) declara_var -> . tipo DOISPONTOS ID VIRGULA declara_var_loop
    (31) declara_var -> . tipo DOISPONTOS ID
    (62) tipo -> . INTEIRO
    (63) tipo -> . FLUTUANTE

    $end            reduce using rule 2 (programa -> declaracao .)
    INTEIRO         shift and go to state 6
    FLUTUANTE       shift and go to state 7

    declaracao                     shift and go to state 2
    programa                       shift and go to state 8
    declaracao_funcao              shift and go to state 3
    declara_var                    shift and go to state 4
    tipo                           shift and go to state 5

state 3

    (3) declaracao -> declaracao_funcao .

    INTEIRO         reduce using rule 3 (declaracao -> declaracao_funcao .)
    FLUTUANTE       reduce using rule 3 (declaracao -> declaracao_funcao .)
    $end            reduce using rule 3 (declaracao -> declaracao_funcao .)


state 4

    (4) declaracao -> declara_var .

    INTEIRO         reduce using rule 4 (declaracao -> declara_var .)
    FLUTUANTE       reduce using rule 4 (declaracao -> declara_var .)
    $end            reduce using rule 4 (declaracao -> declara_var .)


state 5

    (5) declaracao_funcao -> tipo . ID ABREPARENTESES declaracao_parametro FECHAPARENTESES sequencia_declaracao FIM
    (6) declaracao_funcao -> tipo . ID ABREPARENTESES declaracao_parametro FECHAPARENTESES FIM
    (7) declaracao_funcao -> tipo . ID ABREPARENTESES FECHAPARENTESES sequencia_declaracao FIM
    (8) declaracao_funcao -> tipo . ID ABREPARENTESES FECHAPARENTESES FIM
    (30) declara_var -> tipo . DOISPONTOS ID VIRGULA declara_var_loop
    (31) declara_var -> tipo . DOISPONTOS ID

    ID              shift and go to state 9
    DOISPONTOS      shift and go to state 10


state 6

    (62) tipo -> INTEIRO .

    ID              reduce using rule 62 (tipo -> INTEIRO .)
    DOISPONTOS      reduce using rule 62 (tipo -> INTEIRO .)


state 7

    (63) tipo -> FLUTUANTE .

    ID              reduce using rule 63 (tipo -> FLUTUANTE .)
    DOISPONTOS      reduce using rule 63 (tipo -> FLUTUANTE .)


state 8

    (1) programa -> declaracao programa .

    $end            reduce using rule 1 (programa -> declaracao programa .)


state 9

    (5) declaracao_funcao -> tipo ID . ABREPARENTESES declaracao_parametro FECHAPARENTESES sequencia_declaracao FIM
    (6) declaracao_funcao -> tipo ID . ABREPARENTESES declaracao_parametro FECHAPARENTESES FIM
    (7) declaracao_funcao -> tipo ID . ABREPARENTESES FECHAPARENTESES sequencia_declaracao FIM
    (8) declaracao_funcao -> tipo ID . ABREPARENTESES FECHAPARENTESES FIM

    ABREPARENTESES  shift and go to state 11


state 10

    (30) declara_var -> tipo DOISPONTOS . ID VIRGULA declara_var_loop
    (31) declara_var -> tipo DOISPONTOS . ID

    ID              shift and go to state 12


state 11

    (5) declaracao_funcao -> tipo ID ABREPARENTESES . declaracao_parametro FECHAPARENTESES sequencia_declaracao FIM
    (6) declaracao_funcao -> tipo ID ABREPARENTESES . declaracao_parametro FECHAPARENTESES FIM
    (7) declaracao_funcao -> tipo ID ABREPARENTESES . FECHAPARENTESES sequencia_declaracao FIM
    (8) declaracao_funcao -> tipo ID ABREPARENTESES . FECHAPARENTESES FIM
    (9) declaracao_parametro -> . tipo DOISPONTOS ID VIRGULA declaracao_parametro
    (10) declaracao_parametro -> . tipo DOISPONTOS ID
    (62) tipo -> . INTEIRO
    (63) tipo -> . FLUTUANTE

    FECHAPARENTESES shift and go to state 15
    INTEIRO         shift and go to state 6
    FLUTUANTE       shift and go to state 7

    tipo                           shift and go to state 13
    declaracao_parametro           shift and go to state 14

state 12

    (30) declara_var -> tipo DOISPONTOS ID . VIRGULA declara_var_loop
    (31) declara_var -> tipo DOISPONTOS ID .

    VIRGULA         shift and go to state 16
    INTEIRO         reduce using rule 31 (declara_var -> tipo DOISPONTOS ID .)
    FLUTUANTE       reduce using rule 31 (declara_var -> tipo DOISPONTOS ID .)
    $end            reduce using rule 31 (declara_var -> tipo DOISPONTOS ID .)
    FIM             reduce using rule 31 (declara_var -> tipo DOISPONTOS ID .)
    SE              reduce using rule 31 (declara_var -> tipo DOISPONTOS ID .)
    REPITA          reduce using rule 31 (declara_var -> tipo DOISPONTOS ID .)
    ID              reduce using rule 31 (declara_var -> tipo DOISPONTOS ID .)
    LEIA            reduce using rule 31 (declara_var -> tipo DOISPONTOS ID .)
    ESCREVE         reduce using rule 31 (declara_var -> tipo DOISPONTOS ID .)
    ABREPARENTESES  reduce using rule 31 (declara_var -> tipo DOISPONTOS ID .)
    ATE             reduce using rule 31 (declara_var -> tipo DOISPONTOS ID .)
    SENAO           reduce using rule 31 (declara_var -> tipo DOISPONTOS ID .)


state 13

    (9) declaracao_parametro -> tipo . DOISPONTOS ID VIRGULA declaracao_parametro
    (10) declaracao_parametro -> tipo . DOISPONTOS ID

    DOISPONTOS      shift and go to state 17


state 14

    (5) declaracao_funcao -> tipo ID ABREPARENTESES declaracao_parametro . FECHAPARENTESES sequencia_declaracao FIM
    (6) declaracao_funcao -> tipo ID ABREPARENTESES declaracao_parametro . FECHAPARENTESES FIM

    FECHAPARENTESES shift and go to state 18


state 15

    (7) declaracao_funcao -> tipo ID ABREPARENTESES FECHAPARENTESES . sequencia_declaracao FIM
    (8) declaracao_funcao -> tipo ID ABREPARENTESES FECHAPARENTESES . FIM
    (11) sequencia_declaracao -> . declaracao_codigo
    (12) sequencia_declaracao -> . sequencia_declaracao declaracao_codigo
    (13) declaracao_codigo -> . declaracao_funcao
    (14) declaracao_codigo -> . expressao_condicional
    (15) declaracao_codigo -> . expressao_interacao
    (16) declaracao_codigo -> . expressao_atribuicao
    (17) declaracao_codigo -> . expressao_leia
    (18) declaracao_codigo -> . expressao_escreva
    (19) declaracao_codigo -> . declara_var
    (20) declaracao_codigo -> . retorna
    (21) declaracao_codigo -> . chamada_funcao
    (5) declaracao_funcao -> . tipo ID ABREPARENTESES declaracao_parametro FECHAPARENTESES sequencia_declaracao FIM
    (6) declaracao_funcao -> . tipo ID ABREPARENTESES declaracao_parametro FECHAPARENTESES FIM
    (7) declaracao_funcao -> . tipo ID ABREPARENTESES FECHAPARENTESES sequencia_declaracao FIM
    (8) declaracao_funcao -> . tipo ID ABREPARENTESES FECHAPARENTESES FIM
    (22) expressao_condicional -> . SE expressao ENTAO sequencia_de_declaracao SENAO sequencia_de_declaracao FIM
    (23) expressao_condicional -> . SE expressao ENTAO sequencia_de_declaracao FIM
    (24) expressao_interacao -> . REPITA sequencia_de_declaracao ATE expressao
    (25) expressao_atribuicao -> . ID ATRIBUICAO expressao
    (26) expressao_leia -> . LEIA ABREPARENTESES expressao FECHAPARENTESES
    (27) expressao_escreva -> . ESCREVE ABREPARENTESES expressao FECHAPARENTESES
    (30) declara_var -> . tipo DOISPONTOS ID VIRGULA declara_var_loop
    (31) declara_var -> . tipo DOISPONTOS ID
    (34) retorna -> . ABREPARENTESES expressao FECHAPARENTESES
    (35) chamada_funcao -> . ID ABREPARENTESES parametros_chamada FECHAPARENTESES
    (62) tipo -> . INTEIRO
    (63) tipo -> . FLUTUANTE

    FIM             shift and go to state 22
    SE              shift and go to state 33
    REPITA          shift and go to state 34
    ID              shift and go to state 19
    LEIA            shift and go to state 35
    ESCREVE         shift and go to state 36
    ABREPARENTESES  shift and go to state 20
    INTEIRO         shift and go to state 6
    FLUTUANTE       shift and go to state 7

    tipo                           shift and go to state 5
    sequencia_declaracao           shift and go to state 21
    declaracao_codigo              shift and go to state 23
    declaracao_funcao              shift and go to state 24
    expressao_condicional          shift and go to state 25
    expressao_interacao            shift and go to state 26
    expressao_atribuicao           shift and go to state 27
    expressao_leia                 shift and go to state 28
    expressao_escreva              shift and go to state 29
    declara_var                    shift and go to state 30
    retorna                        shift and go to state 31
    chamada_funcao                 shift and go to state 32

state 16

    (30) declara_var -> tipo DOISPONTOS ID VIRGULA . declara_var_loop
    (32) declara_var_loop -> . ID VIRGULA declara_var_loop
    (33) declara_var_loop -> . ID

    ID              shift and go to state 37

    declara_var_loop               shift and go to state 38

state 17

    (9) declaracao_parametro -> tipo DOISPONTOS . ID VIRGULA declaracao_parametro
    (10) declaracao_parametro -> tipo DOISPONTOS . ID

    ID              shift and go to state 39


state 18

    (5) declaracao_funcao -> tipo ID ABREPARENTESES declaracao_parametro FECHAPARENTESES . sequencia_declaracao FIM
    (6) declaracao_funcao -> tipo ID ABREPARENTESES declaracao_parametro FECHAPARENTESES . FIM
    (11) sequencia_declaracao -> . declaracao_codigo
    (12) sequencia_declaracao -> . sequencia_declaracao declaracao_codigo
    (13) declaracao_codigo -> . declaracao_funcao
    (14) declaracao_codigo -> . expressao_condicional
    (15) declaracao_codigo -> . expressao_interacao
    (16) declaracao_codigo -> . expressao_atribuicao
    (17) declaracao_codigo -> . expressao_leia
    (18) declaracao_codigo -> . expressao_escreva
    (19) declaracao_codigo -> . declara_var
    (20) declaracao_codigo -> . retorna
    (21) declaracao_codigo -> . chamada_funcao
    (5) declaracao_funcao -> . tipo ID ABREPARENTESES declaracao_parametro FECHAPARENTESES sequencia_declaracao FIM
    (6) declaracao_funcao -> . tipo ID ABREPARENTESES declaracao_parametro FECHAPARENTESES FIM
    (7) declaracao_funcao -> . tipo ID ABREPARENTESES FECHAPARENTESES sequencia_declaracao FIM
    (8) declaracao_funcao -> . tipo ID ABREPARENTESES FECHAPARENTESES FIM
    (22) expressao_condicional -> . SE expressao ENTAO sequencia_de_declaracao SENAO sequencia_de_declaracao FIM
    (23) expressao_condicional -> . SE expressao ENTAO sequencia_de_declaracao FIM
    (24) expressao_interacao -> . REPITA sequencia_de_declaracao ATE expressao
    (25) expressao_atribuicao -> . ID ATRIBUICAO expressao
    (26) expressao_leia -> . LEIA ABREPARENTESES expressao FECHAPARENTESES
    (27) expressao_escreva -> . ESCREVE ABREPARENTESES expressao FECHAPARENTESES
    (30) declara_var -> . tipo DOISPONTOS ID VIRGULA declara_var_loop
    (31) declara_var -> . tipo DOISPONTOS ID
    (34) retorna -> . ABREPARENTESES expressao FECHAPARENTESES
    (35) chamada_funcao -> . ID ABREPARENTESES parametros_chamada FECHAPARENTESES
    (62) tipo -> . INTEIRO
    (63) tipo -> . FLUTUANTE

    FIM             shift and go to state 41
    SE              shift and go to state 33
    REPITA          shift and go to state 34
    ID              shift and go to state 19
    LEIA            shift and go to state 35
    ESCREVE         shift and go to state 36
    ABREPARENTESES  shift and go to state 20
    INTEIRO         shift and go to state 6
    FLUTUANTE       shift and go to state 7

    tipo                           shift and go to state 5
    sequencia_declaracao           shift and go to state 40
    declaracao_codigo              shift and go to state 23
    declaracao_funcao              shift and go to state 24
    expressao_condicional          shift and go to state 25
    expressao_interacao            shift and go to state 26
    expressao_atribuicao           shift and go to state 27
    expressao_leia                 shift and go to state 28
    expressao_escreva              shift and go to state 29
    declara_var                    shift and go to state 30
    retorna                        shift and go to state 31
    chamada_funcao                 shift and go to state 32

state 19

    (25) expressao_atribuicao -> ID . ATRIBUICAO expressao
    (35) chamada_funcao -> ID . ABREPARENTESES parametros_chamada FECHAPARENTESES

    ATRIBUICAO      shift and go to state 42
    ABREPARENTESES  shift and go to state 43


state 20

    (34) retorna -> ABREPARENTESES . expressao FECHAPARENTESES
    (38) expressao -> . expressao_simples
    (39) expressao -> . expressao_simples operadores_comparacao expressao_simples
    (40) expressao_simples -> . expressao_simples operadores_atribuicao termo
    (41) expressao_simples -> . expressao_simples operadores_multiplicacao termo
    (42) expressao_simples -> . termo
    (43) termo -> . fator
    (44) fator -> . ABREPARENTESES expressao FECHAPARENTESES
    (45) fator -> . chamada_funcao
    (46) fator -> . expressao_numerica
    (47) fator -> . expressao_id
    (35) chamada_funcao -> . ID ABREPARENTESES parametros_chamada FECHAPARENTESES
    (48) expressao_numerica -> . numero
    (49) expressao_id -> . ID
    (64) numero -> . INTEIRO
    (65) numero -> . FLUTUANTE

    ABREPARENTESES  shift and go to state 44
    ID              shift and go to state 52
    INTEIRO         shift and go to state 54
    FLUTUANTE       shift and go to state 55

    expressao                      shift and go to state 45
    expressao_simples              shift and go to state 46
    termo                          shift and go to state 47
    fator                          shift and go to state 48
    chamada_funcao                 shift and go to state 49
    expressao_numerica             shift and go to state 50
    expressao_id                   shift and go to state 51
    numero                         shift and go to state 53

state 21
